# password_protection

./: CMakeLists.txt  README.md
appendix/: БФИ2202_ОИБ_Лаб№2_Вар№1.docx
pass_protection/: database_manager.cpp  database_manager.hpp  main.cpp  utils.cpp  utils.hpp  validators.cpp  validators.h
pass_protection/forms/: authorization.ui  authorizationform.cpp  authorizationform.hpp  change.ui  change_password.ui  changeform.cpp  changeform.hpp  mainwindow.ui  mainwindowform.cpp  mainwindowform.hpp  registration.ui  registrationform.cpp  registrationform.hpp
pass_protection/resources/: pass_protection.database  pass_protection.qrc  secret_info.hpp
secret_info/: main.cpp
secret_info/forms/: mainwindowform.cpp  mainwindowform.hpp
